--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha333-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc3wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <title>Wowsearch</title>
+    <title>WowSearch: Hace feliz a los navegadores.</title>
+    <meta name="description" content="La mayor web de información sobre World of Warcraft (WoW),
+     con guías y noticias, además de información sobre clases, profesiones, artefactos, bandas, transfiguración ¿y mucho más!">
+     <meta name="keywords" content="World of Warcraft,Shadowlands,Ayuda,Noticias,Base de datos,Calculadoras,Herramientas,Guías,Perfiles">
+     <link rel="icon" type="image/png" sizes="16x16" href="Imagenes/favicon-16x16.png">
 </head>
 
 <body>
@@ -93,7 +97,10 @@
                                     </li>
                             </li>
                         </ul>
-                        </li>
+                            </li>
+                            <li class="nav-item">
+                                <a href="Componentes/Form.html" class="nav-link active">Contacto</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -668,23 +675,22 @@
         </div>
 
         <footer>
-            <nav class="navbar bg-dark d-flex justify-content-center ">
-                <div class="row">
-                    <div class="col-lg-3 col-sm-3 col-md-3 col-3">
-                        <img class="FB" src="Imagenes/FB.svg" alt="" width="25px" height="25px">
-                    </div>
-                    <div class="col-lg-3 col-sm-3 col-md-3 col-3">
-                        <img class="TWT" src="Imagenes/TWITTER.svg" alt="" width="25px" height="25px">
-                    </div>
-                    <div class="col-lg-3 col-sm-3 col-md-3 col-3">
-                        <img class="INSTA" src="Imagenes/INSTA.svg" alt="" width="25px" height="25px">
-                    </div>
-                    <div class="col-lg-3 col-sm-3 col-md-3 col-3">
-                        <img class="LKN" src="Imagenes/LKN.svg" alt="" width="25px" height="25px">
-                    </div>
-                </div>
-
-            </nav>
+                <nav class="navbar bg-dark d-flex justify-content-center ">
+                        <div class="row">
+                            <div class="col-lg-3 col-sm-3 col-md-3 col-3 d-flex justify-content-center">
+                                <img class="FB" src="Imagenes/FB.svg" alt="Icono de facebook" width="25px" height="25px">
+                            </div>
+                            <div class="col-lg-3 col-sm-3 col-md-3 col-3 d-flex justify-content-center">
+                                <img class="TWT" src="Imagenes/TWITTER.svg" alt="Icono de Twitter" width="25px" height="25px">
+                            </div>
+                            <div class="col-lg-3 col-sm-3 col-md-3 col-3 d-flex justify-content-center">
+                                <img class="INSTA" src="Imagenes/INSTA.svg" alt="Icono de instragram" width="25px" height="25px">
+                            </div>
+                            <div class="col-lg-3 col-sm-3 col-md-3 col-3 d-flex justify-content-center">
+                                <img class="LKN" src="Imagenes/LKN.svg" alt="Icono de linkenid" width="25px" height="25px">
+                            </div>
+                        </div>             
+                </nav>
         </footer>
     </div>
 
