--- a/Componentes/Form.html
+++ b/Componentes/Form.html
@@ -39,7 +39,14 @@
           </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+    integrity="sha333-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve3agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+    integrity="sha333-nsg3ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq535AcH39TLBQObG" crossorigin="anonymous">
+    </script>
 
 </body>
+
 
 </html>
